# teamworksams

./: .buildinfo  .codecov.yml  .coverage  .coverage.MVGTQN7KCW.40339.XIZxzpCx  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  coverage.xml  genindex.html  index.html  objects.inv  pip_install_log.txt  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py
_modules/: index.html
_sources/: index.rst.txt
docs/: conf.py  index.rst
reference/: ams_client.html  ams_error.html  create_user.html  delete_database_entry.html  delete_event_data.html  delete_event_option.html  delete_multiple_events.html  edit_user.html  event_filter.html  event_option.html  file_upload_option.html  form_option.html  get_client.html  get_database.html  get_database_option.html  get_event_data.html  get_form_schema.html  get_forms.html  get_group.html  get_profile_data.html  get_user.html  group_option.html  insert_database_entry.html  insert_database_option.html  insert_event_data.html  insert_event_option.html  login.html  login_option.html  profile_filter.html  profile_option.html  reference.html  sync_event_data.html  sync_event_filter.html  sync_event_option.html  update_database_entry.html  update_database_option.html  update_event_data.html  update_event_option.html  upload_and_attach_to_avatars.html  upload_and_attach_to_events.html  (+6 more)
teamworksams/: __init__.py  database_build.py  database_clean.py  database_fetch.py  database_main.py  database_option.py  database_process.py  database_validate.py  delete_build.py  delete_main.py  delete_option.py  export_build.py  (+37 more)
(+138 files in other folders)
